--- a/scripts/jupyter/data_sandbox.ipynb
+++ b/scripts/jupyter/data_sandbox.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,40 +56,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-07-29 16:33:26,512 __main__ 0/1 INFO :: Frame:100\n",
-      "2019-07-29 16:33:29,257 __main__ 0/1 INFO :: Frame:200\n",
-      "2019-07-29 16:33:31,911 __main__ 0/1 INFO :: Frame:300\n",
-      "2019-07-29 16:33:34,814 __main__ 0/1 INFO :: Frame:400\n",
-      "2019-07-29 16:33:37,656 __main__ 0/1 INFO :: Frame:500\n",
-      "2019-07-29 16:33:40,611 __main__ 0/1 INFO :: Frame:600\n",
-      "2019-07-29 16:33:43,587 __main__ 0/1 INFO :: Frame:700\n",
-      "2019-07-29 16:33:46,610 __main__ 0/1 INFO :: Frame:800\n",
-      "2019-07-29 16:33:49,698 __main__ 0/1 INFO :: Frame:900\n",
-      "2019-07-29 16:33:52,455 __main__ 0/1 INFO :: Frame:1000\n",
-      "2019-07-29 16:33:55,173 __main__ 0/1 INFO :: Frame:1100\n",
-      "2019-07-29 16:33:58,182 __main__ 0/1 INFO :: Frame:1200\n",
-      "2019-07-29 16:34:01,476 __main__ 0/1 INFO :: Frame:1300\n",
-      "2019-07-29 16:34:04,298 __main__ 0/1 INFO :: Frame:1400\n",
-      "2019-07-29 16:34:06,973 __main__ 0/1 INFO :: Frame:1500\n",
-      "2019-07-29 16:34:09,697 __main__ 0/1 INFO :: Frame:1600\n",
-      "2019-07-29 16:34:12,338 __main__ 0/1 INFO :: Frame:1700\n",
-      "2019-07-29 16:34:15,041 __main__ 0/1 INFO :: Frame:1800\n",
-      "2019-07-29 16:34:17,715 __main__ 0/1 INFO :: Frame:1900\n",
-      "2019-07-29 16:34:21,459 __main__ 0/1 INFO :: Frame:2000\n"
+      "2019-09-13 13:36:12,444 __main__ 0/1 INFO :: Frame:100\n",
+      "2019-09-13 13:36:15,191 __main__ 0/1 INFO :: Frame:200\n",
+      "2019-09-13 13:36:17,811 __main__ 0/1 INFO :: Frame:300\n",
+      "2019-09-13 13:36:20,469 __main__ 0/1 INFO :: Frame:400\n",
+      "2019-09-13 13:36:23,136 __main__ 0/1 INFO :: Frame:500\n",
+      "2019-09-13 13:36:25,781 __main__ 0/1 INFO :: Frame:600\n",
+      "2019-09-13 13:36:28,406 __main__ 0/1 INFO :: Frame:700\n",
+      "2019-09-13 13:36:31,016 __main__ 0/1 INFO :: Frame:800\n",
+      "2019-09-13 13:36:33,638 __main__ 0/1 INFO :: Frame:900\n",
+      "2019-09-13 13:36:36,289 __main__ 0/1 INFO :: Frame:1000\n",
+      "2019-09-13 13:36:38,974 __main__ 0/1 INFO :: Frame:1100\n",
+      "2019-09-13 13:36:41,630 __main__ 0/1 INFO :: Frame:1200\n",
+      "2019-09-13 13:36:44,584 __main__ 0/1 INFO :: Frame:1300\n",
+      "2019-09-13 13:36:47,292 __main__ 0/1 INFO :: Frame:1400\n",
+      "2019-09-13 13:36:51,162 __main__ 0/1 INFO :: Frame:1500\n",
+      "2019-09-13 13:36:55,207 __main__ 0/1 INFO :: Frame:1600\n",
+      "2019-09-13 13:36:58,035 __main__ 0/1 INFO :: Frame:1700\n",
+      "2019-09-13 13:37:00,860 __main__ 0/1 INFO :: Frame:1800\n",
+      "2019-09-13 13:37:03,498 __main__ 0/1 INFO :: Frame:1900\n",
+      "2019-09-13 13:37:06,299 __main__ 0/1 INFO :: Frame:2000\n"
      ]
     }
    ],
@@ -123,6 +116,77 @@
     "    #coeff2[ind-1] = coeffs[m_2][ell_2-m_2]\n",
     "    for m in range(len(coeffs)):\n",
     "        coeffs_all[ind-1, m, m:] = coeffs[m]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.13221712, 3.12007189, 3.10785494, 3.09562179, 3.08338248,\n",
+       "       3.07114021, 3.05889627, 3.0466513 , 3.03440567, 3.02215957,\n",
+       "       3.00991313, 2.99766644, 2.98541955, 2.97317252, 2.96092537,\n",
+       "       2.94867812, 2.93643079, 2.92418339, 2.91193594, 2.89968844,\n",
+       "       2.88744091, 2.87519333, 2.86294573, 2.8506981 , 2.83845045,\n",
+       "       2.82620277, 2.81395508, 2.80170737, 2.78945965, 2.77721192,\n",
+       "       2.76496417, 2.75271641, 2.74046864, 2.72822087, 2.71597308,\n",
+       "       2.70372529, 2.69147749, 2.67922969, 2.66698188, 2.65473406,\n",
+       "       2.64248624, 2.63023842, 2.61799059, 2.60574275, 2.59349492,\n",
+       "       2.58124708, 2.56899923, 2.55675139, 2.54450354, 2.53225568,\n",
+       "       2.52000783, 2.50775997, 2.49551211, 2.48326425, 2.47101639,\n",
+       "       2.45876852, 2.44652066, 2.43427279, 2.42202492, 2.40977704,\n",
+       "       2.39752917, 2.3852813 , 2.37303342, 2.36078554, 2.34853767,\n",
+       "       2.33628979, 2.32404191, 2.31179403, 2.29954614, 2.28729826,\n",
+       "       2.27505038, 2.26280249, 2.25055461, 2.23830672, 2.22605883,\n",
+       "       2.21381094, 2.20156305, 2.18931517, 2.17706728, 2.16481939,\n",
+       "       2.15257149, 2.1403236 , 2.12807571, 2.11582782, 2.10357993,\n",
+       "       2.09133203, 2.07908414, 2.06683624, 2.05458835, 2.04234045,\n",
+       "       2.03009256, 2.01784466, 2.00559677, 1.99334887, 1.98110097,\n",
+       "       1.96885308, 1.95660518, 1.94435728, 1.93210938, 1.91986149,\n",
+       "       1.90761359, 1.89536569, 1.88311779, 1.87086989, 1.85862199,\n",
+       "       1.84637409, 1.83412619, 1.82187829, 1.80963039, 1.79738249,\n",
+       "       1.78513459, 1.77288669, 1.76063879, 1.74839089, 1.73614299,\n",
+       "       1.72389509, 1.71164719, 1.69939929, 1.68715139, 1.67490349,\n",
+       "       1.66265559, 1.65040768, 1.63815978, 1.62591188, 1.61366398,\n",
+       "       1.60141608, 1.58916818, 1.57692028, 1.56467238, 1.55242447,\n",
+       "       1.54017657, 1.52792867, 1.51568077, 1.50343287, 1.49118497,\n",
+       "       1.47893707, 1.46668917, 1.45444127, 1.44219336, 1.42994546,\n",
+       "       1.41769756, 1.40544966, 1.39320176, 1.38095386, 1.36870596,\n",
+       "       1.35645806, 1.34421016, 1.33196226, 1.31971436, 1.30746646,\n",
+       "       1.29521856, 1.28297066, 1.27072276, 1.25847486, 1.24622696,\n",
+       "       1.23397907, 1.22173117, 1.20948327, 1.19723537, 1.18498747,\n",
+       "       1.17273958, 1.16049168, 1.14824378, 1.13599589, 1.12374799,\n",
+       "       1.11150009, 1.0992522 , 1.0870043 , 1.07475641, 1.06250852,\n",
+       "       1.05026062, 1.03801273, 1.02576484, 1.01351694, 1.00126905,\n",
+       "       0.98902116, 0.97677327, 0.96452538, 0.95227749, 0.9400296 ,\n",
+       "       0.92778171, 0.91553382, 0.90328593, 0.89103805, 0.87879016,\n",
+       "       0.86654228, 0.85429439, 0.84204651, 0.82979863, 0.81755075,\n",
+       "       0.80530287, 0.79305499, 0.78080711, 0.76855923, 0.75631136,\n",
+       "       0.74406348, 0.73181561, 0.71956774, 0.70731987, 0.695072  ,\n",
+       "       0.68282413, 0.67057627, 0.6583284 , 0.64608054, 0.63383268,\n",
+       "       0.62158482, 0.60933697, 0.59708912, 0.58484127, 0.57259342,\n",
+       "       0.56034558, 0.54809774, 0.5358499 , 0.52360207, 0.51135424,\n",
+       "       0.49910641, 0.48685859, 0.47461078, 0.46236296, 0.45011516,\n",
+       "       0.43786736, 0.42561957, 0.41337179, 0.40112401, 0.38887624,\n",
+       "       0.37662848, 0.36438074, 0.352133  , 0.33988528, 0.32763757,\n",
+       "       0.31538988, 0.30314221, 0.29089455, 0.27864692, 0.26639932,\n",
+       "       0.25415175, 0.24190421, 0.22965671, 0.21740926, 0.20516187,\n",
+       "       0.19291454, 0.18066729, 0.16842013, 0.1561731 , 0.14392622,\n",
+       "       0.13167953, 0.11943309, 0.10718699, 0.09494135, 0.08269639,\n",
+       "       0.07045245, 0.05821017, 0.04597087, 0.03373771, 0.02152076,\n",
+       "       0.00937553])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theta"
    ]
   },
   {
