--- a/scripts/jupyter/data_sandbox.ipynb
+++ b/scripts/jupyter/data_sandbox.ipynb
@@ -1162,20 +1162,13 @@
     "image1.set_clim(0, 2*np.pi)\n",
     "fig.colorbar(image1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:dedalus]",
+   "display_name": "Python [conda env:python3]",
    "language": "python",
-   "name": "conda-env-dedalus-py"
+   "name": "conda-env-python3-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1187,7 +1180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.0"
   },
   "varInspector": {
    "cols": {
