--- a/scripts/jupyter/find_phase_speed.ipynb
+++ b/scripts/jupyter/find_phase_speed.ipynb
@@ -674,307 +674,34 @@
      "output_type": "stream",
      "text": [
       "Frame: 0\n",
-      "Frame: 10\n",
-      "Frame: 20\n",
-      "Frame: 30\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Rohit/anaconda3/envs/mayavi/lib/python3.6/site-packages/ipykernel_launcher.py:31: RuntimeWarning: divide by zero encountered in log10\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Frame: 40\n",
-      "Frame: 50\n",
-      "Frame: 60\n",
-      "Frame: 70\n",
-      "Frame: 80\n",
-      "Frame: 90\n",
       "Frame: 100\n",
-      "Frame: 110\n",
-      "Frame: 120\n",
-      "Frame: 130\n",
-      "Frame: 140\n",
-      "Frame: 150\n",
-      "Frame: 160\n",
-      "Frame: 170\n",
-      "Frame: 180\n",
-      "Frame: 190\n",
       "Frame: 200\n",
-      "Frame: 210\n",
-      "Frame: 220\n",
-      "Frame: 230\n",
-      "Frame: 240\n",
-      "Frame: 250\n",
-      "Frame: 260\n",
-      "Frame: 270\n",
-      "Frame: 280\n",
-      "Frame: 290\n",
       "Frame: 300\n",
-      "Frame: 310\n",
-      "Frame: 320\n",
-      "Frame: 330\n",
-      "Frame: 340\n",
-      "Frame: 350\n",
-      "Frame: 360\n",
-      "Frame: 370\n",
-      "Frame: 380\n",
-      "Frame: 390\n",
       "Frame: 400\n",
-      "Frame: 410\n",
-      "Frame: 420\n",
-      "Frame: 430\n",
-      "Frame: 440\n",
-      "Frame: 450\n",
-      "Frame: 460\n",
-      "Frame: 470\n",
-      "Frame: 480\n",
-      "Frame: 490\n",
       "Frame: 500\n",
-      "Frame: 510\n",
-      "Frame: 520\n",
-      "Frame: 530\n",
-      "Frame: 540\n",
-      "Frame: 550\n",
-      "Frame: 560\n",
-      "Frame: 570\n",
-      "Frame: 580\n",
-      "Frame: 590\n",
       "Frame: 600\n",
-      "Frame: 610\n",
-      "Frame: 620\n",
-      "Frame: 630\n",
-      "Frame: 640\n",
-      "Frame: 650\n",
-      "Frame: 660\n",
-      "Frame: 670\n",
-      "Frame: 680\n",
-      "Frame: 690\n",
       "Frame: 700\n",
-      "Frame: 710\n",
-      "Frame: 720\n",
-      "Frame: 730\n",
-      "Frame: 740\n",
-      "Frame: 750\n",
-      "Frame: 760\n",
-      "Frame: 770\n",
-      "Frame: 780\n",
-      "Frame: 790\n",
       "Frame: 800\n",
-      "Frame: 810\n",
-      "Frame: 820\n",
-      "Frame: 830\n",
-      "Frame: 840\n",
-      "Frame: 850\n",
-      "Frame: 860\n",
-      "Frame: 870\n",
-      "Frame: 880\n",
-      "Frame: 890\n",
       "Frame: 900\n",
-      "Frame: 910\n",
-      "Frame: 920\n",
-      "Frame: 930\n",
-      "Frame: 940\n",
-      "Frame: 950\n",
-      "Frame: 960\n",
-      "Frame: 970\n",
-      "Frame: 980\n",
-      "Frame: 990\n",
       "Frame: 1000\n",
-      "Frame: 1010\n",
-      "Frame: 1020\n",
-      "Frame: 1030\n",
-      "Frame: 1040\n",
-      "Frame: 1050\n",
-      "Frame: 1060\n",
-      "Frame: 1070\n",
-      "Frame: 1080\n",
-      "Frame: 1090\n",
       "Frame: 1100\n",
-      "Frame: 1110\n",
-      "Frame: 1120\n",
-      "Frame: 1130\n",
-      "Frame: 1140\n",
-      "Frame: 1150\n",
-      "Frame: 1160\n",
-      "Frame: 1170\n",
-      "Frame: 1180\n",
-      "Frame: 1190\n",
       "Frame: 1200\n",
-      "Frame: 1210\n",
-      "Frame: 1220\n",
-      "Frame: 1230\n",
-      "Frame: 1240\n",
-      "Frame: 1250\n",
-      "Frame: 1260\n",
-      "Frame: 1270\n",
-      "Frame: 1280\n",
-      "Frame: 1290\n",
       "Frame: 1300\n",
-      "Frame: 1310\n",
-      "Frame: 1320\n",
-      "Frame: 1330\n",
-      "Frame: 1340\n",
-      "Frame: 1350\n",
-      "Frame: 1360\n",
-      "Frame: 1370\n",
-      "Frame: 1380\n",
-      "Frame: 1390\n",
       "Frame: 1400\n",
-      "Frame: 1410\n",
-      "Frame: 1420\n",
-      "Frame: 1430\n",
-      "Frame: 1440\n",
-      "Frame: 1450\n",
-      "Frame: 1460\n",
-      "Frame: 1470\n",
-      "Frame: 1480\n",
-      "Frame: 1490\n",
       "Frame: 1500\n",
-      "Frame: 1510\n",
-      "Frame: 1520\n",
-      "Frame: 1530\n",
-      "Frame: 1540\n",
-      "Frame: 1550\n",
-      "Frame: 1560\n",
-      "Frame: 1570\n",
-      "Frame: 1580\n",
-      "Frame: 1590\n",
       "Frame: 1600\n",
-      "Frame: 1610\n",
-      "Frame: 1620\n",
-      "Frame: 1630\n",
-      "Frame: 1640\n",
-      "Frame: 1650\n",
-      "Frame: 1660\n",
-      "Frame: 1670\n",
-      "Frame: 1680\n",
-      "Frame: 1690\n",
       "Frame: 1700\n",
-      "Frame: 1710\n",
-      "Frame: 1720\n",
-      "Frame: 1730\n",
-      "Frame: 1740\n",
-      "Frame: 1750\n",
-      "Frame: 1760\n",
-      "Frame: 1770\n",
-      "Frame: 1780\n",
-      "Frame: 1790\n",
       "Frame: 1800\n",
-      "Frame: 1810\n",
-      "Frame: 1820\n",
-      "Frame: 1830\n",
-      "Frame: 1840\n",
-      "Frame: 1850\n",
-      "Frame: 1860\n",
-      "Frame: 1870\n",
-      "Frame: 1880\n",
-      "Frame: 1890\n",
       "Frame: 1900\n",
-      "Frame: 1910\n",
-      "Frame: 1920\n",
-      "Frame: 1930\n",
-      "Frame: 1940\n",
-      "Frame: 1950\n",
-      "Frame: 1960\n",
-      "Frame: 1970\n",
-      "Frame: 1980\n",
-      "Frame: 1990\n",
       "Frame: 2000\n",
-      "Frame: 2010\n",
-      "Frame: 2020\n",
-      "Frame: 2030\n",
-      "Frame: 2040\n",
-      "Frame: 2050\n",
-      "Frame: 2060\n",
-      "Frame: 2070\n",
-      "Frame: 2080\n",
-      "Frame: 2090\n",
       "Frame: 2100\n",
-      "Frame: 2110\n",
-      "Frame: 2120\n",
-      "Frame: 2130\n",
-      "Frame: 2140\n",
-      "Frame: 2150\n",
-      "Frame: 2160\n",
-      "Frame: 2170\n",
-      "Frame: 2180\n",
-      "Frame: 2190\n",
       "Frame: 2200\n",
-      "Frame: 2210\n",
-      "Frame: 2220\n",
-      "Frame: 2230\n",
-      "Frame: 2240\n",
-      "Frame: 2250\n",
-      "Frame: 2260\n",
-      "Frame: 2270\n",
-      "Frame: 2280\n",
-      "Frame: 2290\n",
       "Frame: 2300\n",
-      "Frame: 2310\n",
-      "Frame: 2320\n",
-      "Frame: 2330\n",
-      "Frame: 2340\n",
-      "Frame: 2350\n",
-      "Frame: 2360\n",
-      "Frame: 2370\n",
-      "Frame: 2380\n",
-      "Frame: 2390\n",
       "Frame: 2400\n",
-      "Frame: 2410\n",
-      "Frame: 2420\n",
-      "Frame: 2430\n",
-      "Frame: 2440\n",
-      "Frame: 2450\n",
-      "Frame: 2460\n",
-      "Frame: 2470\n",
-      "Frame: 2480\n",
-      "Frame: 2490\n",
       "Frame: 2500\n",
-      "Frame: 2510\n",
-      "Frame: 2520\n",
-      "Frame: 2530\n",
-      "Frame: 2540\n",
-      "Frame: 2550\n",
-      "Frame: 2560\n",
-      "Frame: 2570\n",
-      "Frame: 2580\n",
-      "Frame: 2590\n",
       "Frame: 2600\n",
-      "Frame: 2610\n",
-      "Frame: 2620\n",
-      "Frame: 2630\n",
-      "Frame: 2640\n",
-      "Frame: 2650\n",
-      "Frame: 2660\n",
-      "Frame: 2670\n",
-      "Frame: 2680\n",
-      "Frame: 2690\n",
       "Frame: 2700\n",
-      "Frame: 2710\n",
-      "Frame: 2720\n",
-      "Frame: 2730\n",
-      "Frame: 2740\n",
-      "Frame: 2750\n",
-      "Frame: 2760\n",
-      "Frame: 2770\n",
-      "Frame: 2780\n",
-      "Frame: 2790\n",
-      "Frame: 2800\n",
-      "Frame: 2810\n",
-      "Frame: 2820\n",
-      "Frame: 2830\n",
-      "Frame: 2840\n",
-      "Frame: 2850\n",
-      "Frame: 2860\n",
-      "Frame: 2870\n",
-      "Frame: 2880\n"
+      "Frame: 2800\n"
      ]
     }
    ],
@@ -1002,10 +729,11 @@
     "    \n",
     "kxkx, kyky = np.meshgrid(phi_freq, th_freq)\n",
     "mag_fac = 1e-5\n",
+    "step = 5\n",
     "with writer.saving(fig, \"../videos/sphere110_beta_plane.mp4\", dpi):\n",
     "    \n",
-    "    for i in range(first_frame, last_frame + 1, 1):\n",
-    "        if i%10==0: print('Frame: %i' %(i))\n",
+    "    for i in range(first_frame, last_frame + 1, step):\n",
+    "        if i%100==0: print('Frame: %i' %(i))\n",
     "        \n",
     "        #find FFT \n",
     "        om_fft2 = np.fft.fftshift(np.fft.fft2(om[i, :, th_inds]))\n",
@@ -1018,7 +746,7 @@
     "        if i == first_frame:\n",
     "            \n",
     "            plt.subplot(121)\n",
-    "            image1 = plt.pcolor(phi, th[th_inds], om[i, :, th_inds], vmax=om_max, cmap='RdBu_r')\n",
+    "            image1 = plt.pcolor(phi, th[th_inds], om[i, :, th_inds], vmax=om_max, vmin=-om_max, cmap='RdBu_r')\n",
     "            plt.xlabel(r'$\\phi$'); plt.ylabel(r'$\\theta$');\n",
     "            \n",
     "            plt.subplot(122)\n",
