changes to make figures/movies

--- a/scripts/jupyter/data_sandbox.ipynb
+++ b/scripts/jupyter/data_sandbox.ipynb
@@ -875,7 +875,7 @@
     "for m in range(L_max+1):\n",
     "    for ell in range(L_max+1):\n",
     "        if ell!=0:\n",
-    "            E = E + (np.abs(coeffs_all[:,m,ell])**2)/(ell*(ell+1))\n",
+    "            E = E + 0.5*(np.abs(coeffs_all[:,m,ell])**2)/(ell*(ell+1))\n",
     "    "
    ]
   },
@@ -912,6 +912,7 @@
     "ell2 = 12\n",
     "ell3 = 14\n",
     "Emodes = np.abs(coeffs_all[:,0,ell1])**2/(ell1*(ell1+1)) + np.abs(coeffs_all[:,0,ell2])**2/(ell2*(ell2+1)) + np.abs(coeffs_all[:,0,ell3])**2/(ell3*(ell3+1))\n",
+    "Emods = Emodes/2\n",
     "fig = plt.figure(figsize=(10,6), dpi=100)\n",
     "plt.plot(t_arr, E)\n",
     "plt.plot(t_arr, Emodes)\n",
@@ -1162,6 +1163,13 @@
     "image1.set_clim(0, 2*np.pi)\n",
     "fig.colorbar(image1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
